// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VegaDeclarativeChart - Heatmap Charts should render heatmap from actual air_quality_heatmap.json schema 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="Air Quality Index Heatmap. Heat map chart with 12 data points. "
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 255)"
            >
              <path
                class="domain"
                d="M64.5,0.5H-43.5"
                stroke="currentColor"
              />
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              width="6"
              x="7"
              y="296"
            />
            <text
              aria-describedby="tooltip-_r_6_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_5_"
              text-anchor="middle"
              x="10"
              y="302"
            >
              ...
            </text>
            <span
              hidden=""
            />
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(64, 0)"
            >
              <path
                class="domain"
                d="M0.5,255.5V20.5"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,225.18656716417908)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  New York
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,166.72885572139305)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Los Angeles
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,108.27114427860695)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Chicago
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,49.813432835820876)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Houston
                </text>
              </g>
            </g>
            <g
              aria-label="Morning, Houston. , 72."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 21.169154228855703)"
            >
              <rect
                fill="rgb(138, 69, 118)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                72
              </text>
            </g>
            <g
              aria-label="Afternoon, Houston. , 88."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 21.169154228855703)"
            >
              <rect
                fill="rgb(219, 21, 36)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                88
              </text>
            </g>
            <g
              aria-label="Evening, Houston. , 75."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 21.169154228855703)"
            >
              <rect
                fill="rgb(153, 60, 102)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                75
              </text>
            </g>
            <g
              aria-label="Morning, Chicago. , 52."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 79.62686567164178)"
            >
              <rect
                fill="rgb(36, 129, 219)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                52
              </text>
            </g>
            <g
              aria-label="Afternoon, Chicago. , 68."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 79.62686567164178)"
            >
              <rect
                fill="rgb(118, 81, 138)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                68
              </text>
            </g>
            <g
              aria-label="Evening, Chicago. , 61."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 79.62686567164178)"
            >
              <rect
                fill="rgb(82, 102, 173)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                61
              </text>
            </g>
            <g
              aria-label="Morning, Los Angeles. , 85."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 138.08457711442787)"
            >
              <rect
                fill="rgb(204, 30, 51)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                85
              </text>
            </g>
            <g
              aria-label="Afternoon, Los Angeles. , 95."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 138.08457711442787)"
            >
              <rect
                fill="rgb(255, 0, 0)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                95
              </text>
            </g>
            <g
              aria-label="Evening, Los Angeles. , 78."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 138.08457711442787)"
            >
              <rect
                fill="rgb(168, 51, 87)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                78
              </text>
            </g>
            <g
              aria-label="Morning, New York. , 45."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 196.5422885572139)"
            >
              <rect
                fill="rgb(0, 150, 255)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                45
              </text>
            </g>
            <g
              aria-label="Afternoon, New York. , 62."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 196.5422885572139)"
            >
              <rect
                fill="rgb(87, 99, 168)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                62
              </text>
            </g>
            <g
              aria-label="Evening, New York. , 58."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 196.5422885572139)"
            >
              <rect
                fill="rgb(67, 111, 188)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                58
              </text>
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              transform="translate(0,
                 227)rotate(-90)"
              width="6"
              x="83"
              y="18"
            />
            <text
              aria-describedby="tooltip-_r_8_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_7_"
              text-anchor="middle"
              transform="translate(0,
                 227)rotate(-90)"
              x="86"
              y="24"
            >
              City
            </text>
            <span
              hidden=""
            />
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label=""
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: rgb(0, 255, 255); --rect-borderColor: rgb(0, 255, 255);"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 255, 255); border-color: rgb(0, 255, 255); --rect-content-high-contrast: linear-gradient(to right, rgb(0, 255, 255), rgb(0, 255, 255));"
                />
                <div
                  class="fui-legend__text"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VegaDeclarativeChart - Heatmap Charts should render heatmap from actual attendance_heatmap.json schema 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="Weekly Attendance Patterns. Heat map chart with 12 data points. "
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 255)"
            >
              <path
                class="domain"
                d="M64.5,0.5H-43.5"
                stroke="currentColor"
              />
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              width="6"
              x="7"
              y="296"
            />
            <text
              aria-describedby="tooltip-_r_d_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_c_"
              text-anchor="middle"
              x="10"
              y="302"
            >
              ...
            </text>
            <span
              hidden=""
            />
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(64, 0)"
            >
              <path
                class="domain"
                d="M0.5,255.5V20.5"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,225.18656716417908)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Period 1
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,166.72885572139305)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Period 2
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,108.27114427860695)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Period 3
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,49.813432835820876)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Period 4
                </text>
              </g>
            </g>
            <g
              aria-label="Monday, Period 4. , 85."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 21.169154228855703)"
            >
              <rect
                fill="rgb(0, 150, 255)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                85
              </text>
            </g>
            <g
              aria-label="Tuesday, Period 4. , 86."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 21.169154228855703)"
            >
              <rect
                fill="rgb(28, 134, 227)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                86
              </text>
            </g>
            <g
              aria-label="Wednesday, Period 4. , 88."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 21.169154228855703)"
            >
              <rect
                fill="rgb(85, 100, 170)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                88
              </text>
            </g>
            <g
              aria-label="Monday, Period 3. , 87."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 79.62686567164178)"
            >
              <rect
                fill="rgb(57, 117, 198)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                87
              </text>
            </g>
            <g
              aria-label="Tuesday, Period 3. , 91."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 79.62686567164178)"
            >
              <rect
                fill="rgb(170, 50, 85)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                91
              </text>
            </g>
            <g
              aria-label="Wednesday, Period 3. , 90."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 79.62686567164178)"
            >
              <rect
                fill="rgb(142, 67, 114)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                90
              </text>
            </g>
            <g
              aria-label="Monday, Period 2. , 89."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 138.08457711442787)"
            >
              <rect
                fill="rgb(114, 83, 142)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                89
              </text>
            </g>
            <g
              aria-label="Tuesday, Period 2. , 88."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 138.08457711442787)"
            >
              <rect
                fill="rgb(85, 100, 170)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                88
              </text>
            </g>
            <g
              aria-label="Wednesday, Period 2. , 92."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 138.08457711442787)"
            >
              <rect
                fill="rgb(198, 34, 57)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                92
              </text>
            </g>
            <g
              aria-label="Monday, Period 1. , 92."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(28.23841059602649, 196.5422885572139)"
            >
              <rect
                fill="rgb(198, 34, 57)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                92
              </text>
            </g>
            <g
              aria-label="Tuesday, Period 1. , 90."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-7.523178807947019, 196.5422885572139)"
            >
              <rect
                fill="rgb(142, 67, 114)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                90
              </text>
            </g>
            <g
              aria-label="Wednesday, Period 1. , 94."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-43.28476821192053, 196.5422885572139)"
            >
              <rect
                fill="rgb(255, 0, 0)"
                height="57.28855721393035"
                width="35.04635761589404"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(17.52317880794702, 28.644278606965177)"
              >
                94
              </text>
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              transform="translate(0,
                 227)rotate(-90)"
              width="6"
              x="83"
              y="18"
            />
            <text
              aria-describedby="tooltip-_r_f_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_e_"
              text-anchor="middle"
              transform="translate(0,
                 227)rotate(-90)"
              x="86"
              y="24"
            >
              Class Period
            </text>
            <span
              hidden=""
            />
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label=""
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: rgb(0, 255, 255); --rect-borderColor: rgb(0, 255, 255);"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 255, 255); border-color: rgb(0, 255, 255); --rect-content-high-contrast: linear-gradient(to right, rgb(0, 255, 255), rgb(0, 255, 255));"
                />
                <div
                  class="fui-legend__text"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VegaDeclarativeChart - Heatmap Charts should render heatmap with rect marks and quantitative color 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="Heat map chart with 4 data points. "
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 275)"
            >
              <path
                class="domain"
                d="M40.5,0.5H-19.5"
                stroke="currentColor"
              />
            </g>
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(40, 0)"
            >
              <path
                class="domain"
                d="M0.5,275.5V20.5"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,210.6188118811881)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Mon
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,84.38118811881189)"
              >
                <line
                  stroke="currentColor"
                  x2="0"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-10"
                >
                  Tue
                </text>
              </g>
            </g>
            <g
              aria-label="A, Tue. , 30."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(10.297029702970299, 22.52475247524754)"
            >
              <rect
                fill="rgb(170, 50, 85)"
                height="123.7128712871287"
                width="29.10891089108911"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(14.554455445544555, 61.85643564356435)"
              >
                30
              </text>
            </g>
            <g
              aria-label="B, Tue. , 40."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-19.405940594059405, 22.52475247524754)"
            >
              <rect
                fill="rgb(255, 0, 0)"
                height="123.7128712871287"
                width="29.10891089108911"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(14.554455445544555, 61.85643564356435)"
              >
                40
              </text>
            </g>
            <g
              aria-label="A, Mon. , 10."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(10.297029702970299, 148.76237623762376)"
            >
              <rect
                fill="rgb(0, 150, 255)"
                height="123.7128712871287"
                width="29.10891089108911"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(14.554455445544555, 61.85643564356435)"
              >
                10
              </text>
            </g>
            <g
              aria-label="B, Mon. , 20."
              fill-opacity="1"
              role="img"
              tabindex="0"
              transform="translate(-19.405940594059405, 148.76237623762376)"
            >
              <rect
                fill="rgb(85, 100, 170)"
                height="123.7128712871287"
                width="29.10891089108911"
              />
              <text
                class="fui-hmc__text"
                dominant-baseline="middle"
                fill="var(--colorNeutralForeground1)"
                text-anchor="middle"
                transform="translate(14.554455445544555, 61.85643564356435)"
              >
                20
              </text>
            </g>
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label=""
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: rgb(0, 199, 255); --rect-borderColor: rgb(0, 199, 255);"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 199, 255); border-color: rgb(0, 199, 255); --rect-content-high-contrast: linear-gradient(to right, rgb(0, 199, 255), rgb(0, 199, 255));"
                />
                <div
                  class="fui-legend__text"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VegaDeclarativeChart - Scatter Charts should render scatter chart from actual bmi_scatter.json schema 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="BMI Distribution Scatter"
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 255)"
            >
              <path
                class="domain"
                d="M64.5,6V0.5H-43.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(60.9,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  155
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(42.900000000000006,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  160
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(24.9,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  165
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(6.900000000000002,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  170
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(-11.099999999999994,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  175
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(-29.1,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  180
                </text>
              </g>
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              width="6"
              x="7"
              y="296"
            />
            <text
              aria-describedby="tooltip-_r_l_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_k_"
              text-anchor="middle"
              x="10"
              y="302"
            >
              ...
            </text>
            <span
              hidden=""
            />
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(64, 0)"
            >
              <path
                class="domain"
                d="M-6,255.5H0.5V20.5H-6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,255.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-108"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-118"
                >
                  0
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,196.75)"
              >
                <line
                  stroke="currentColor"
                  x2="-108"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-118"
                >
                  25
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,138)"
              >
                <line
                  stroke="currentColor"
                  x2="-108"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-118"
                >
                  50
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,79.25)"
              >
                <line
                  stroke="currentColor"
                  x2="-108"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-118"
                >
                  75
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,20.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-108"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-118"
                >
                  100
                </text>
              </g>
            </g>
            <g>
              <line
                id="verticalLine_r_g_"
                stroke="#323130"
                stroke-dasharray="5,5"
                visibility="hidden"
                x1="0"
                x2="0"
                y1="0"
                y2="310"
              />
              <g>
                <g
                  aria-label="Underweight, series 3 of 3 with 2 data points."
                  role="region"
                >
                  <circle
                    aria-label="158. Underweight, 45."
                    cx="49.6"
                    cy="149.25"
                    data-is-focusable="true"
                    fill="#d62728"
                    id="circle_r_e__2_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#d62728"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="162. Underweight, 48."
                    cx="35.2"
                    cy="142.2"
                    data-is-focusable="true"
                    fill="#d62728"
                    id="circle_r_e__2_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#d62728"
                    tabindex="0"
                  />
                  ,
                </g>
                <g
                  aria-label="Overweight, series 2 of 3 with 5 data points."
                  role="region"
                >
                  <circle
                    aria-label="165. Overweight, 68."
                    cx="24.4"
                    cy="95.19999999999999"
                    data-is-focusable="true"
                    fill="#2ca02c"
                    id="circle_r_e__1_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2ca02c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="170. Overweight, 75."
                    cx="6.400000000000002"
                    cy="78.75"
                    data-is-focusable="true"
                    fill="#2ca02c"
                    id="circle_r_e__1_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2ca02c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="180. Overweight, 95."
                    cx="-29.6"
                    cy="31.75000000000001"
                    data-is-focusable="true"
                    fill="#2ca02c"
                    id="circle_r_e__1_2"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2ca02c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="172. Overweight, 82."
                    cx="-0.7999999999999972"
                    cy="62.30000000000001"
                    data-is-focusable="true"
                    fill="#2ca02c"
                    id="circle_r_e__1_3"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2ca02c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="177. Overweight, 88."
                    cx="-18.800000000000004"
                    cy="48.2"
                    data-is-focusable="true"
                    fill="#2ca02c"
                    id="circle_r_e__1_4"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2ca02c"
                    tabindex="0"
                  />
                  ,
                </g>
                <g
                  aria-label="Normal, series 1 of 3 with 3 data points."
                  role="region"
                >
                  <circle
                    aria-label="160. Normal, 52."
                    cx="42.400000000000006"
                    cy="132.79999999999998"
                    data-is-focusable="true"
                    fill="#ff7f0e"
                    id="circle_r_e__0_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#ff7f0e"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="175. Normal, 70."
                    cx="-11.599999999999994"
                    cy="90.50000000000001"
                    data-is-focusable="true"
                    fill="#ff7f0e"
                    id="circle_r_e__0_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#ff7f0e"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="168. Normal, 58."
                    cx="13.599999999999998"
                    cy="118.7"
                    data-is-focusable="true"
                    fill="#ff7f0e"
                    id="circle_r_e__0_2"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#ff7f0e"
                    tabindex="0"
                  />
                  ,
                </g>
              </g>
            </g>
            <rect
              class="fui-cart_svgTooltip"
              height="3"
              transform="translate(0,
                 227)rotate(-90)"
              width="6"
              x="83"
              y="18"
            />
            <text
              aria-describedby="tooltip-_r_n_"
              class="fui-cart__axisTitle"
              id="tooltip-host_r_m_"
              text-anchor="middle"
              transform="translate(0,
                 227)rotate(-90)"
              x="86"
              y="24"
            >
              Weight (kg)
            </text>
            <span
              hidden=""
            />
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="true"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label="Normal"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #ff7f0e; --rect-borderColor: #ff7f0e;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(255, 127, 14); border-color: #ff7f0e; --rect-content-high-contrast: linear-gradient(to right, #ff7f0e, #ff7f0e);"
                />
                <div
                  class="fui-legend__text"
                >
                  Normal
                </div>
              </button>
              <button
                aria-label="Overweight"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #2ca02c; --rect-borderColor: #2ca02c;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(44, 160, 44); border-color: #2ca02c; --rect-content-high-contrast: linear-gradient(to right, #2ca02c, #2ca02c);"
                />
                <div
                  class="fui-legend__text"
                >
                  Overweight
                </div>
              </button>
              <button
                aria-label="Underweight"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #d62728; --rect-borderColor: #d62728;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(214, 39, 40); border-color: #d62728; --rect-content-high-contrast: linear-gradient(to right, #d62728, #d62728);"
                />
                <div
                  class="fui-legend__text"
                >
                  Underweight
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VegaDeclarativeChart - Scatter Charts should render scatter chart with basic point encoding 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 275)"
            >
              <path
                class="domain"
                d="M40.5,6V0.5H-19.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(22.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  20
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(-1.4999999999999982,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  40
                </text>
              </g>
            </g>
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(40, 0)"
            >
              <path
                class="domain"
                d="M-6,275.5H0.5V20.5H-6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,275.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  0
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,211.75)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  11
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,148)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  22
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,84.25)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  33
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,20.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  44
                </text>
              </g>
            </g>
            <g>
              <line
                id="verticalLine_r_2_"
                stroke="#323130"
                stroke-dasharray="5,5"
                visibility="hidden"
                x1="0"
                x2="0"
                y1="0"
                y2="310"
              />
              <g>
                <g
                  aria-label="C, series 3 of 3 with 1 data points."
                  role="region"
                >
                  <circle
                    aria-label="50. C, 40."
                    cx="-14"
                    cy="43.18181818181819"
                    data-is-focusable="true"
                    fill="#2aa0a4"
                    id="circle_r_0__2_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#2aa0a4"
                    tabindex="0"
                  />
                  ,
                </g>
                <g
                  aria-label="B, series 2 of 3 with 2 data points."
                  role="region"
                >
                  <circle
                    aria-label="20. B, 30."
                    cx="22"
                    cy="101.13636363636365"
                    data-is-focusable="true"
                    fill="#e3008c"
                    id="circle_r_0__1_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#e3008c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="40. B, 35."
                    cx="-1.9999999999999982"
                    cy="72.15909090909092"
                    data-is-focusable="true"
                    fill="#e3008c"
                    id="circle_r_0__1_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#e3008c"
                    tabindex="0"
                  />
                  ,
                </g>
                <g
                  aria-label="A, series 1 of 3 with 2 data points."
                  role="region"
                >
                  <circle
                    aria-label="10. A, 20."
                    cx="34"
                    cy="159.0909090909091"
                    data-is-focusable="true"
                    fill="#637cef"
                    id="circle_r_0__0_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#637cef"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="30. A, 25."
                    cx="10"
                    cy="130.11363636363635"
                    data-is-focusable="true"
                    fill="#637cef"
                    id="circle_r_0__0_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#637cef"
                    tabindex="0"
                  />
                  ,
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="true"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label="A"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #637cef; --rect-borderColor: #637cef;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(99, 124, 239); border-color: #637cef; --rect-content-high-contrast: linear-gradient(to right, #637cef, #637cef);"
                />
                <div
                  class="fui-legend__text"
                >
                  A
                </div>
              </button>
              <button
                aria-label="B"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #e3008c; --rect-borderColor: #e3008c;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(227, 0, 140); border-color: #e3008c; --rect-content-high-contrast: linear-gradient(to right, #e3008c, #e3008c);"
                />
                <div
                  class="fui-legend__text"
                >
                  B
                </div>
              </button>
              <button
                aria-label="C"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #2aa0a4; --rect-borderColor: #2aa0a4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(42, 160, 164); border-color: #2aa0a4; --rect-content-high-contrast: linear-gradient(to right, #2aa0a4, #2aa0a4);"
                />
                <div
                  class="fui-legend__text"
                >
                  C
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VegaDeclarativeChart - Scatter Charts should render scatter chart with size encoding 1`] = `
<div>
  <div>
    <div
      style="width: 100%; height: 100%;"
    >
      <div
        class="fui-cart__root fui-charts-resp-child__root"
        id="chart_"
        role="presentation"
      >
        <div
          class="fui-cart__chartWrapper fui-charts-resp-child__chartWrapper"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            class="fui-cart__chart fui-charts-resp-child__chart"
            height="310"
            style="display: block;"
            width="0"
          >
            <g
              class="fui-cart__xAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="xAxisGElementchart_"
              text-anchor="middle"
              transform="translate(0, 275)"
            >
              <path
                class="domain"
                d="M40.5,6V0.5H-19.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(35.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  160
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(10.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  170
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(-14.499999999999996,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  aria-hidden="true"
                  dy="0.71em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate;"
                  y="16"
                >
                  180
                </text>
              </g>
            </g>
            <g
              class="fui-cart__yAxis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              id="yAxisGElementchart_"
              text-anchor="end"
              transform="translate(40, 0)"
            >
              <path
                class="domain"
                d="M-6,275.5H0.5V20.5H-6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,275.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  0
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,211.75)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  25
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,148)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  50
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,84.25)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  75
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(0,20.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-60"
                />
                <text
                  aria-hidden="true"
                  dy="0.32em"
                  fill="currentColor"
                  style="direction: ltr; unicode-bidi: isolate; text-anchor: end;"
                  x="-70"
                >
                  100
                </text>
              </g>
            </g>
            <g>
              <line
                id="verticalLine_r_9_"
                stroke="#323130"
                stroke-dasharray="5,5"
                visibility="hidden"
                x1="0"
                x2="0"
                y1="0"
                y2="310"
              />
              <g>
                <g
                  aria-label="Overweight, series 2 of 2 with 3 data points."
                  role="region"
                >
                  <circle
                    aria-label="165. Overweight, 68."
                    cx="22.499999999999993"
                    cy="101.6"
                    data-is-focusable="true"
                    fill="#e3008c"
                    id="circle_r_7__1_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#e3008c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="170. Overweight, 75."
                    cx="10"
                    cy="83.75"
                    data-is-focusable="true"
                    fill="#e3008c"
                    id="circle_r_7__1_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#e3008c"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="180. Overweight, 95."
                    cx="-14.999999999999996"
                    cy="32.750000000000014"
                    data-is-focusable="true"
                    fill="#e3008c"
                    id="circle_r_7__1_2"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#e3008c"
                    tabindex="0"
                  />
                  ,
                </g>
                <g
                  aria-label="Normal, series 1 of 2 with 2 data points."
                  role="region"
                >
                  <circle
                    aria-label="160. Normal, 52."
                    cx="35"
                    cy="142.4"
                    data-is-focusable="true"
                    fill="#637cef"
                    id="circle_r_7__0_0"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#637cef"
                    tabindex="0"
                  />
                  ,
                  <circle
                    aria-label="175. Normal, 70."
                    cx="-2.5000000000000036"
                    cy="96.50000000000001"
                    data-is-focusable="true"
                    fill="#637cef"
                    id="circle_r_7__0_1"
                    opacity="1"
                    r="4"
                    role="img"
                    stroke="#637cef"
                    tabindex="0"
                  />
                  ,
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div
          class="fui-cart__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="true"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: unset;"
            >
              <button
                aria-label="Normal"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #637cef; --rect-borderColor: #637cef;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(99, 124, 239); border-color: #637cef; --rect-content-high-contrast: linear-gradient(to right, #637cef, #637cef);"
                />
                <div
                  class="fui-legend__text"
                >
                  Normal
                </div>
              </button>
              <button
                aria-label="Overweight"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #e3008c; --rect-borderColor: #e3008c;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(227, 0, 140); border-color: #e3008c; --rect-content-high-contrast: linear-gradient(to right, #e3008c, #e3008c);"
                />
                <div
                  class="fui-legend__text"
                >
                  Overweight
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
